objects/Product_Class_Category__c.object
<CustomObject>
    <description>This is tethered to Product Class to allow and EVEN LOWER level of categorization because .. yeah.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The product class that this category is associated with.  Will be used with filters.  HOPEFULLY</description>
        <inlineHelpText>The product class this category is associated with.</inlineHelpText>
        <label>Product Class</label>
        <referenceTo>Product_Class__c</referenceTo>
        <relationshipLabel>Product Class Categories</relationshipLabel>
        <relationshipName>Product_Class_Categories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>forSearch__c</fullName>
        <defaultValue>&quot;All&quot;</defaultValue>
        <description>hidden field that will allow All to be typed into a lookup search and see all values.</description>
        <inlineHelpText>You shouldn&apos;t see this!</inlineHelpText>
        <label>forSearch</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Product Class Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Class__c</columns>
        <columns>Active__c</columns>
        <columns>forSearch__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Class Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Class Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>